# HEGE

./: .travis.yml  README.md  demo.json  lisp.cabal  rec.sh  stack.yaml
app/: Main.hs
src/: Datatypes.hs  Eval.hs  Parser.hs  Repl.hs  Test.hs
src/Ops/: Bool.hs  IO.hs  List.hs  Numeric.hs  Types.hs  Util.hs
test/: Spec.hs
