name:                lisp
version:             0.1.0.0
homepage:            https://github.com/githubuser/lisp#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.MD
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Parser
                   , Eval
                   , Datatypes
                   , Ops.Types
                   , Ops.Numeric
                   , Ops.Bool
                   , Ops.Util
                   , Ops.List
                   , Ops.IO
                   , Repl
                     
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  build-depends:       parsec
                     , mtl
                     , strict
                     , transformers

executable hege
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lisp
                     , parsec
                     , hspec
  default-language:    Haskell2010

test-suite lisp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       lisp,
                       hspec,
                       mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lisp
